--- a/Helpful score prediction.ipynb
+++ b/Helpful score prediction.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\coac\\anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "% matplotlib inline\n",
     "\n",
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {
     "scrolled": false
    },
@@ -380,7 +371,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -469,9 +460,9 @@
      "output_type": "stream",
      "text": [
       "Original review text:\n",
-      "Words really can describe how wonderful this game is. The first thing you will notice is the incredible graphics (note: a 3D card is not required!.) Everything is drawn in great detail right down to character traits and facial expressions (who would have thought a fleshless person would be so good with expressions.) The story is also very entertaining and added with the graphics, it makes this a very absorbing adventure. This is one of the few games that I can't say anything negative about. This is a must have!\n",
+      "After 90 or so inaccurate reviews, I have this to say : Epic Superman has awesome graphics, gameplay, voice-acting; and it's flight engine -- something alot people don't seem to understand so they bash the game; well, you see : people like me and Mah boi, Superman, can actually fly therefore we can accurately review Epic Superman. This game also has multi-player, which is nearly as good as Black Ops. If only there were online play.. -- I have to say, THIS is an accurate simulation of flight and the BEST game on a Nintendo console. Ever.\n",
       "Preprocessed text:\n",
-      "['word', 'really', 'describe', 'wonderful', 'game', 'first', 'thing', 'notice', 'incredible', 'graphic', 'note', '3d', 'card', 'require', 'everything', 'draw', 'great', 'detail', 'right', 'character', 'trait', 'facial', 'expression', 'would', 'think', 'fleshless', 'person', 'would', 'good', 'expression', 'story', 'also', 'entertaining', 'add', 'graphic', 'make', 'absorbing', 'adventure', 'one', 'game', 'say', 'anything', 'negative', 'must']\n"
+      "['90', 'inaccurate', 'review', 'say', 'epic', 'superman', 'awesome', 'graphic', 'gameplay', 'voice', 'acting', 'flight', 'engine', 'something', 'alot', 'people', 'seem', 'understand', 'bash', 'game', 'well', 'see', 'people', 'like', 'mah', 'boi', 'superman', 'actually', 'fly', 'therefore', 'accurately', 'review', 'epic', 'superman', 'game', 'also', 'multi', 'player', 'nearly', 'good', 'black', 'ops', 'online', 'play', 'say', 'accurate', 'simulation', 'flight', 'best', 'game', 'nintendo', 'console', 'ever']\n"
      ]
     }
    ],
@@ -492,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +596,7 @@
        "195"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +617,7 @@
        "783"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -676,17 +667,17 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.93      0.97      0.95       453\n",
-      " notHelpful       0.90      0.80      0.85       173\n",
+      "    helpful       0.89      0.97      0.92       442\n",
+      " notHelpful       0.90      0.70      0.79       184\n",
       "\n",
-      "avg / total       0.92      0.92      0.92       626\n",
+      "avg / total       0.89      0.89      0.88       626\n",
       "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.72      0.83      0.77       106\n",
-      " notHelpful       0.49      0.33      0.40        51\n",
+      "    helpful       0.85      0.85      0.85       117\n",
+      " notHelpful       0.55      0.55      0.55        40\n",
       "\n",
-      "avg / total       0.64      0.67      0.65       157\n",
+      "avg / total       0.77      0.77      0.77       157\n",
       "\n"
      ]
     }
@@ -704,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -713,101 +704,17 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.97      1.00      0.99       453\n",
-      " notHelpful       1.00      0.92      0.96       173\n",
-      "\n",
-      "avg / total       0.98      0.98      0.98       626\n",
-      "\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "    helpful       0.73      0.88      0.80       106\n",
-      " notHelpful       0.57      0.33      0.42        51\n",
-      "\n",
-      "avg / total       0.68      0.70      0.68       157\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "clf = RandomForestClassifier()\n",
-    "\n",
-    "\n",
-    "model = create_pipeline(classifier=clf)\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_train)\n",
-    "print(classification_report(y_train, y_pred, target_names=label_encoder.classes_))\n",
-    "\n",
-    "y_pred = model.predict(X_test)\n",
-    "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "    helpful       1.00      1.00      1.00       453\n",
-      " notHelpful       1.00      1.00      1.00       173\n",
+      "    helpful       1.00      1.00      1.00       442\n",
+      " notHelpful       1.00      1.00      1.00       184\n",
       "\n",
       "avg / total       1.00      1.00      1.00       626\n",
       "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.70      0.91      0.79       106\n",
-      " notHelpful       0.50      0.20      0.28        51\n",
+      "    helpful       0.86      0.86      0.86       117\n",
+      " notHelpful       0.60      0.60      0.60        40\n",
       "\n",
-      "avg / total       0.64      0.68      0.62       157\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "\n",
-    "clf = ExtraTreesClassifier()\n",
-    "\n",
-    "\n",
-    "model = create_pipeline(classifier=clf)\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_train)\n",
-    "print(classification_report(y_train, y_pred, target_names=label_encoder.classes_))\n",
-    "\n",
-    "y_pred = model.predict(X_test)\n",
-    "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "    helpful       1.00      1.00      1.00       453\n",
-      " notHelpful       1.00      1.00      1.00       173\n",
-      "\n",
-      "avg / total       1.00      1.00      1.00       626\n",
-      "\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "    helpful       0.74      0.89      0.81       106\n",
-      " notHelpful       0.60      0.35      0.44        51\n",
-      "\n",
-      "avg / total       0.69      0.71      0.69       157\n",
+      "avg / total       0.80      0.80      0.80       157\n",
       "\n"
      ]
     }
@@ -830,11 +737,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    helpful       1.00      1.00      1.00       442\n",
+      " notHelpful       1.00      1.00      1.00       184\n",
+      "\n",
+      "avg / total       1.00      1.00      1.00       626\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    helpful       0.83      0.90      0.86       117\n",
+      " notHelpful       0.61      0.47      0.54        40\n",
+      "\n",
+      "avg / total       0.78      0.79      0.78       157\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "clf = Pipeline([\n",
+    "  ('feature_selection', SelectFromModel(LinearSVC())),\n",
+    "  ('classification', GradientBoostingClassifier())\n",
+    "])\n",
+    "\n",
+    "\n",
+    "model = create_pipeline(classifier=clf)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_train)\n",
+    "print(classification_report(y_train, y_pred, target_names=label_encoder.classes_))\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    helpful       1.00      1.00      1.00       442\n",
+      " notHelpful       1.00      0.99      1.00       184\n",
+      "\n",
+      "avg / total       1.00      1.00      1.00       626\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    helpful       0.84      0.87      0.85       117\n",
+      " notHelpful       0.57      0.50      0.53        40\n",
+      "\n",
+      "avg / total       0.77      0.78      0.77       157\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "clf = Pipeline([\n",
+    "  ('feature_selection', SelectFromModel(ExtraTreesClassifier())),\n",
+    "  ('classification', GradientBoostingClassifier())\n",
+    "])\n",
+    "\n",
+    "\n",
+    "model = create_pipeline(classifier=clf)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_train)\n",
+    "print(classification_report(y_train, y_pred, target_names=label_encoder.classes_))\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### W2c Vectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
+    "# Modified for python 3 from https://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/\n",
     "\n",
     "class MeanEmbeddingVectorizer(object):\n",
     "    def __init__(self, word2vec):\n",
@@ -881,14 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,6 +911,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Modified for our need from http://migsena.com/build-and-visualize-word2vec-model-on-amazon-reviews/\n",
+    "\n",
     "raw_corpus = u\"\".join(video_games['reviewText']+\" . \" + video_games['summary'])"
    ]
   },
