Added title fixed typos

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3164,10 +3164,15 @@
    "source": [
     "After several testings on multiple features, we found the best features combination to get a `variance score` of about 0.12. This is a really poor result considering the best possible score is 1.0.\n",
     "\n",
+    "### Classification\n",
+    "\n",
+    "The task to predict directly a continuous value for the `helpfulRate` seems to be to complicated. We switched to a classification task, predicting if the review is helpful or not helpful.\n",
+    "\n",
     "#### Neural networks\n",
     "\n",
-    "Considering the data distribution, usage of linear regression seems to be innapropriate. We chose to change completely our strategy by using neural networks. As we have important data aggregates, we may succeed in training a neural network to predict helpful rates.\n",
+    "Considering the data distribution, usage of linear regression seems to be innapropriate. We chose to change completely our strategy by using neural networks. As we have important data aggregates, we may succeed in training a neural network to predict helpfulness.\n",
     "\n",
+    "##### Using only overall\n",
     "We start by a naive approach, by trying to predict if a review was helpful only using the `overall` feature; meaning answering the question: \"How well can we predict if a review is helpful based on the review grade?\""
    ]
   },
@@ -3256,7 +3261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get here a new insight about data distribution. One start reviews seems to have a lower helpful rate than other reviews. This may be due to overstated reviews and product bashing. Let's do a short descriptive analysis to confirm this new information.\n",
+    "We get here a new insight about data distribution. One star reviews seems to have a lower helpful rate than other reviews. This may be due to overstated reviews and product bashing. Let's do a short descriptive analysis to confirm this new information.\n",
     "\n",
     "Because we know we have high differences in the number of evaluations in each grade category, we use the standard error instead of the standard deviation to draw the error bars. This allows to mitigate the observations."
    ]
@@ -3329,6 +3334,8 @@
    "source": [
     "After cross-validation, we get even better results with an accuracy around 0.8. However, predicting the helpfulness of a review by sorting it as `true` or `false` based on the grade is not very helpful and creates an unwanted segregation in data. Considering Amazon would use these results to promote specific reviews, it may create an incentive for posting fake 5 star reviews to be put forward.\n",
     "\n",
+    "###### Predicting 3 class\n",
+    "\n",
     "Before testing against more features, we will create three clusters to determine if a review was helpful:\n",
     "\n",
     "- 0 will mean the review is not helpful at all (less than 33% of the evaluations said it was useful)\n",
@@ -3389,6 +3396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Using only reviewLength\n",
     "We can see that our neural networks is limited here, and have some difficulties determining when the reviews should be \"polemical\". We will now introduce more features to see if we can improve our accuracy score which dropped a lot."
    ]
   },
@@ -3438,6 +3446,8 @@
    "metadata": {},
    "source": [
     "We can see with the previous code that our classifer always return *2* as the level of helpfulness of the review; it does not find any trend in the dataset.\n",
+    "\n",
+    "##### Using only summaryLength\n",
     "\n",
     "By using only the review length, we get a really lower range. It is not possible, only considering the review length, to determine if it would be helpful. We will need to go deeper and analyse the review contents."
    ]
@@ -3513,9 +3523,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3527,7 +3537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
