Use mario word instead of ps

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -37323,31 +37323,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('p', 0.6748400926589966),\n",
-       " ('playstaion', 0.639427900314331),\n",
-       " ('playstion', 0.6300841569900513),\n",
-       " ('ps3', 0.6289232969284058),\n",
-       " ('ps2', 0.6052511930465698),\n",
-       " ('playsation', 0.5917361974716187),\n",
-       " ('myplaystation', 0.5900927782058716),\n",
-       " ('ps1', 0.5873886346817017),\n",
-       " ('theplaystation', 0.5868010520935059),\n",
-       " ('aplaystation', 0.5847926139831543)]"
+       "[('bros', 0.7767923474311829),\n",
+       " ('kart', 0.7274721264839172),\n",
+       " ('luigi', 0.6836210489273071),\n",
+       " ('sunshine', 0.6641625165939331),\n",
+       " ('nsmb', 0.6625683307647705),\n",
+       " ('wiimario', 0.6515724062919617),\n",
+       " ('smb', 0.6476815342903137),\n",
+       " ('nsmb2', 0.6301655173301697),\n",
+       " ('marioworld', 0.6247094869613647),\n",
+       " ('mariokart', 0.6150649785995483)]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w2v_model.wv.most_similar(\"playstation\")"
+    "w2v_model.wv.most_similar(\"mario\")"
    ]
   },
   {
@@ -37689,7 +37689,7 @@
     "\n",
     "model = create_pipeline(classifier=clf)\n",
     "\n",
-    "# We cut these features\n",
+    "# We cut these 4 features\n",
     "model.named_steps.union.transformer_weights['exclamationCount'] = 0\n",
     "model.named_steps.union.transformer_weights['questionCount'] = 0\n",
     "model.named_steps.union.transformer_weights['threeDotsCount'] = 0\n",
@@ -37712,6 +37712,13 @@
    "source": [
     "We see that by removing these 4 features, the f1-score increased by 0.01."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
