--- a/Project.ipynb
+++ b/Project.ipynb
@@ -37080,7 +37080,7 @@
    "metadata": {},
    "source": [
     "##### Training the word2vec model\n",
-    "(This part has been done in another notebook to avoid to surcharge this main notebook)\n",
+    "(This part has been done in another [notebook](https://nbviewer.jupyter.org/github/Coac/epfl-ada/blob/master/Project/Helpful%20score%20prediction.ipynb#Train-w2v) to avoid to surcharge this main notebook)\n",
     "\n",
     "We trained it with all the review and summary text (1,868,601 raw sentences) from all the video games review.\n",
     "The vocabulary length is 59397.\n",
@@ -37765,14 +37765,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of reviews with helpfulcount > 100: 1634\n",
+      "Number of reviews with helpfulcount > 100: 1739\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "    helpful       1.00      1.00      1.00      1033\n",
@@ -37782,8 +37782,8 @@
       "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    helpful       0.95      0.95      0.95       260\n",
-      " notHelpful       0.84      0.84      0.84        88\n",
+      "    helpful       0.95      0.94      0.94       260\n",
+      " notHelpful       0.83      0.84      0.84        88\n",
       "\n",
       "avg / total       0.92      0.92      0.92       348\n",
       "\n"
@@ -37792,7 +37792,7 @@
    ],
    "source": [
     "X_train, X_test, y_train, y_test = get_X_Y_from_df(helpful_video_games[helpful_video_games.helpfulCount > 100])\n",
-    "print(\"Number of reviews with helpfulcount > 100:\", len(pc_games_reviews))\n",
+    "print(\"Number of reviews with helpfulcount > 100:\", len(helpful_video_games[helpful_video_games.helpfulCount > 100]))\n",
     "\n",
     "clf = GradientBoostingClassifier()\n",
     "\n",
@@ -37926,6 +37926,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Returning to 3 class classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -37938,6 +37945,56 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We tuned the parameters for our gradient boosting classifier through a grid search. You can see the details there [GridSearch for GBM](https://nbviewer.jupyter.org/github/Coac/epfl-ada/blob/master/Project/Helpful%20score%20prediction.ipynb#Grid-search-for-GBM). The elements used in training were the 1000 PC games."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of reviews: 66774\n"
+     ]
+    }
+   ],
+   "source": [
+    "helpful_video_games2 = helpful_video_games.copy()\n",
+    "helpful_video_games2['wasHelpful'] = helpful_video_games.helpfulRate.map(lambda x: 'notHelpful' if x < 0.33 else 'controversial' if x < 0.66 else 'helpful')\n",
+    "\n",
+    "label_encoder2 = LabelEncoder()\n",
+    "label_encoder2.fit_transform(helpful_video_games2['wasHelpful'])\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = get_X_Y_from_df(helpful_video_games2)\n",
+    "print(\"Number of reviews:\", len(helpful_video_games2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "clf = GradientBoostingClassifier(learning_rate=0.1, n_estimators=60, max_depth=5, min_samples_split=300, min_samples_leaf=20, max_features=13, subsample=0.8, random_state=10)\n",
+    "\n",
+    "model = create_pipeline(classifier=clf)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_train)\n",
+    "print(classification_report(y_train, y_pred, target_names=label_encoder.classes_))\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
+   ]
   },
   {
    "cell_type": "markdown",
