--- a/Project.ipynb
+++ b/Project.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "> To get a better notebook formatting, [click here](https://nbviewer.jupyter.org/github/Coac/epfl-ada/blob/master/Project/Project.ipynb).\n",
     "\n",
+    "> Check out the data story [here](https://adamazon.github.io/).\n",
+    "\n",
     "> Please also check the [readme](https://github.com/Coac/epfl-ada/blob/master/Project/README.md) containing additional explanations.\n",
     "\n",
     "This notebook contains an exploratory analysis of one specific category of products of the Amazon reviews. Our objective is to be able to understand how reviews are distributed and find some useful insights to provide a deeper analysis to answer our research questions.\n",
@@ -19,7 +21,12 @@
     "3. [Correlations](#Correlations)\n",
     "4. [Words occurences](#Words-occurences)\n",
     "5. [Machine learning exploratory](#Machine-learning-exploratory)\n",
-    "6. [Next milestone](#Next-milestone)"
+    "6. [Deeper analysis](#Deeper-analysis)\n",
+    "\n",
+    "   a. [Regression model](#Regression-model)  \n",
+    "   b. [Classification](#Classification)    \n",
+    "   \n",
+    "7. [Conclusion](#Conclusion)"
    ]
   },
   {
@@ -3108,16 +3115,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's not a great success. We dont have in each cluster only review with same score, but a mix. TF-IDF is unstable for such short document lengths.\n",
-    "\n",
-    "For milestone 3, we will use the StarSpace embeddings instead of TF-IDF."
+    "It's not a great success. We dont have in each cluster only review with same score, but a mix. TF-IDF is unstable for such short document lengths."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next milestone"
+    "<hr />\n",
+    "\n",
+    "This is the beggining of the work for milestone 3.\n",
+    "\n",
+    "## Deeper analysis"
    ]
   },
   {
@@ -38072,72 +38081,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 531,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Usage of StarSpace to analyse reviews\n",
+    "## Conclusion\n",
     "\n",
-    "Using StarSpace, we will try to determine if some words may allow to predict helpfulness of reviews.\n",
+    "Thanks to this deeper analysis, we were able to predict the helpful rate of the reviews. This prediction can perform very well if data is reduced to a smaller subset with high constraints (such as a high `helpfulCount`).\n",
     "\n",
-    "#### Based on a reviewer\n",
+    "The main limit to our analysis is that it was only done on a small subset of reviews (*video games*). Training the classifier takes a lot of time because it is required to process a lot of text. This brings difficulties to do cross validations and grid searches. A deeper analysis which could bring new insights could be done on a larger proportion of reviews, and may bring our classifier to give better results or to be more powerful when facing to specific kind of comments.\n",
     "\n",
-    "This study will be done based on some of the most productive reviewers.\n",
+    "It is also difficult to determine subjective contents of the reviews, bringing poor results for the controversial category.\n",
     "\n",
-    "#### Based on a product\n",
-    "\n",
-    "This study will also be done based on some specific products with a lot of reviews. If we don't have enought reviews associated with the product, we may use similar products (using knl algorithm).\n",
-    "\n",
-    "#### Analysis of short reviews\n",
-    "\n",
-    "We will use the study to determine if some aspects of *short* reviews are determinant for the final helpfulness rate.\n",
-    "\n",
-    "### Reviews history\n",
-    "\n",
-    "We will analyse reviews history to determine if some conclusions can be done concerning the Social proof.\n",
-    "\n",
-    "Depending on how much time we will spend, we may extend the above analysis to determine reviews grades."
+    "Finally, the usage of other, modern methods to do the text anlysis could allow to better understand the correlation between text contents and final results. Indeed, Word2Vec algorithm is creating features which are difficult to interpret."
    ]
   }
  ],
@@ -38157,7 +38112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
